Polish translations update

--- a/po/pl.po
+++ b/po/pl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-30 07:47+0100\n"
-"PO-Revision-Date: 2019-09-13 12:44+0200\n"
+"PO-Revision-Date: 2019-12-03 20:02+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
 "Language: pl_PL\n"
@@ -813,9 +813,8 @@ msgstr "Dodaj kanał do bukietu"
 msgid "Add service to favourites"
 msgstr "Dodaj kanał do ulubionych"
 
-#, fuzzy
 msgid "Add services to this bouquet?"
-msgstr "Dodaj kanał do bukietu"
+msgstr "Dodać kanały do tego bukietu?"
 
 msgid "Add timer"
 msgstr "Dodaj timer"
@@ -1042,9 +1041,8 @@ msgstr "Arabski"
 msgid "Are you sure to purge all deleted user bouquets?"
 msgstr "Jesteś pewien, że chcesz całkowicie skasować wszystkie usunięte bukiety?"
 
-#, fuzzy
 msgid "Are you sure to reboot to"
-msgstr "Jesteś pewien, że chcesz usunąć?"
+msgstr "Jesteś pewien, że chcesz zrestartować do"
 
 #, python-format
 msgid "Are you sure to remove all %d.%d%s%s services?"
@@ -1427,10 +1425,10 @@ msgid "Boost green"
 msgstr "Podbij zielony"
 
 msgid "Boot to Android image"
-msgstr ""
+msgstr "Wystartuj z image Android"
 
 msgid "Boot to Recovery menu"
-msgstr ""
+msgstr "Wystartuj z Recovery menu"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bośnia i Hercegowina"
@@ -1714,9 +1712,8 @@ msgstr "Kanały"
 msgid "Channels and EPG"
 msgstr "Kanały i EPG"
 
-#, fuzzy
 msgid "Channels only"
-msgstr "Kanały"
+msgstr "Tylko kanały"
 
 msgid "Chap."
 msgstr "Rozdz."
@@ -3022,7 +3019,7 @@ msgid "EPG language selection 2"
 msgstr "Preferowany język EPG 2"
 
 msgid "EPG only"
-msgstr ""
+msgstr "Tylko EPG"
 
 msgid "EPG selection"
 msgstr "Wybór EPG"
@@ -4224,7 +4221,7 @@ msgid "Icons"
 msgstr "Ikony"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr ""
+msgstr "Jeśli jest wyłączone, podkreślniki w nazwach plików i katalogów nie są wyświetlane i są zastępowane spacjami."
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Jeśli włączone, zakładki zostaną zaktualizowane o nową lokalizację podczas przenoszenia lub kopiowania nagrania."
@@ -4300,7 +4297,6 @@ msgstr "Soft:"
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Importuj kanały i / lub EPG ze zdalnego odbiornika również wtedy, gdy odbiornik wychodzi z trybu standby"
 
-#, fuzzy
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
 msgstr "Importuj kanały i / lub EPG ze zdalnego odbiornika wtedy, gdy odbiornik startuje"
 
@@ -7949,9 +7945,8 @@ msgstr "Przejdź w tryb TV..."
 msgid "Show transponder info"
 msgstr "Pokaż info transpondera"
 
-#, fuzzy
 msgid "Show underline characters in filenames"
-msgstr "Limit znaków w nazwie nagrania"
+msgstr "Wyświetlaj podkreślniki w nazwach plików"
 
 msgid "Show vertical timelines"
 msgstr "Wyświetlaj pionowe linie czasu"
@@ -8653,7 +8648,7 @@ msgid "TRANSLATOR_INFO"
 msgstr ""
 "Specjalnie dla OpenPLi - @blzr\n"
 "http://openpli.org/forums\n"
-"Ostatnia aktualizacja 2019.09.13"
+"Ostatnia aktualizacja 2019.12.03"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Plik TS jest za duży dla ISO9660 level 1!"
@@ -10647,9 +10642,8 @@ msgstr "zaraz się rozpocznie"
 msgid "activate network adapter configuration"
 msgstr "Aktywuj konfigurację adaptera sieciowego"
 
-#, fuzzy
 msgid "active"
-msgstr "Względna"
+msgstr "aktywny"
 
 msgid "actual time only"
 msgstr "Tylko bieżący czas"
