Update Croatian language; thanks @zeljko2

--- a/po/hr.po
+++ b/po/hr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-30 07:47+0100\n"
-"PO-Revision-Date: 2019-11-19 18:30+0100\n"
+"PO-Revision-Date: 2019-12-05 14:35+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
 "Language: hr_HR\n"
@@ -1046,16 +1046,16 @@ msgstr "Jeste li sigurni za ponovno podizanje sustava na"
 
 #, python-format
 msgid "Are you sure to remove all %d.%d%s%s services?"
-msgstr "Želite li zaista izbrisati sve usluge %d.%d%s%s?"
+msgstr "Želite li zaista ukloniti sve usluge %d.%d%s%s?"
 
 msgid "Are you sure to remove all cable services?"
 msgstr "Jeste li sigurni da želite ukloniti sve kabelske usluge?"
 
 msgid "Are you sure to remove all terrestrial services?"
-msgstr "Jeste li sigurni da želite izbrisati sve zemaljske usluge?"
+msgstr "Jeste li sigurni da želite ukloniti sve zemaljske usluge?"
 
 msgid "Are you sure to remove this entry?"
-msgstr "Želite li zaista izbrisati odabrano?"
+msgstr "Želite li zaista ukloniti odabrano?"
 
 msgid ""
 "Are you sure you want to activate this network configuration?\n"
@@ -2743,7 +2743,7 @@ msgid "Directory contains %s and %s."
 msgstr "Direktorij sadrži %s i %s."
 
 msgid "Disable"
-msgstr "Onemogućeno"
+msgstr "Onemogućiti"
 
 msgid "Disable Picture in Picture"
 msgstr "Onemogućena slika u slici"
@@ -2752,13 +2752,13 @@ msgid "Disable background scanning"
 msgstr "Onemogućite pozadinsko skeniranje"
 
 msgid "Disable current event but not coming events"
-msgstr "Onemogući trenutni događaj, ali ne i događaje koji dolaze"
+msgstr "Onemogućite trenutni događaj, ali ne i događaje koji dolaze"
 
 msgid "Disable move mode"
 msgstr "Onemogućite način kretanja"
 
 msgid "Disable timer"
-msgstr "Onemogući tajmer"
+msgstr "Onemogućite tajmer"
 
 msgid "Disabled"
 msgstr "Onemogućeno"
@@ -2868,11 +2868,11 @@ msgstr ""
 
 #, python-format
 msgid "Do you really want to remove directory %s from the disk?"
-msgstr "Jeste li sigurni da želite izbrisati direktorij %s s diska?"
+msgstr "Jeste li sigurni da želite ukloniti direktorij %s s diska?"
 
 #, python-format
 msgid "Do you really want to remove your bookmark of %s?"
-msgstr "Jeste li sigurni da želite izbrisati oznaku %s?"
+msgstr "Jeste li sigurni da želite ukloniti oznaku %s?"
 
 #, python-format
 msgid "Do you really want to stop current event and delete timer %s?"
@@ -2965,7 +2965,7 @@ msgid "Don't zap and disable timer"
 msgstr "Nemojte prebacivati i isključivati tajmer"
 
 msgid "Don't zap and remove timer"
-msgstr "Nemojte prebacivati i brisati tajmer"
+msgstr "Nemojte prebacivati i ukloniti tajmer"
 
 msgid "Done"
 msgstr "Gotovo"
@@ -2973,7 +2973,7 @@ msgstr "Gotovo"
 #, python-format
 msgid "Done - Installed, updated or removed %d package (%s)"
 msgid_plural "Done - Installed, updated or removed %d packages (%s)"
-msgstr[0] "Gotovo - Instaliran, ažuriran ili uklonjen  %d paket (%s)"
+msgstr[0] "Gotovo - Instaliran, ažuriran ili uklonjen %d paket (%s)"
 msgstr[1] "Gotovo - Instalirane, ažurirane ili uklonjene  %d pakete (%s)"
 msgstr[2] "Gotovo - Instalirani, ažurirani ili uklonjeni  %d paketi (%s)"
 
@@ -3161,7 +3161,7 @@ msgid "Enable fallback remote receiver"
 msgstr "Omogućite povratni udaljeni prijemnik"
 
 msgid "Enable favourites edit"
-msgstr "Omogućiti uređivanje paketa"
+msgstr "Omogući uređivanje paketa"
 
 msgid "Enable freesat EPG"
 msgstr "Omogućite slobodne sat EPG"
@@ -3221,7 +3221,7 @@ msgid "Encryption:"
 msgstr "Šifriranje:"
 
 msgid "End alternatives edit"
-msgstr "Završite uređivanje alternativa"
+msgstr "Završite alternativno uređivanje"
 
 msgid "End bouquet edit"
 msgstr "Završite uređivanje paketa"
@@ -4888,7 +4888,7 @@ msgid "Manage your receiver's software"
 msgstr "Upravljanje proširenjima"
 
 msgid "Manual"
-msgstr "Priručnik"
+msgstr "Ručno"
 
 msgid "Manual Scan"
 msgstr "Ručno pretraživanje"
@@ -5646,7 +5646,7 @@ msgid "Open the movie list"
 msgstr "Otvorite popis filmova"
 
 msgid "Options disable timer"
-msgstr "Opcije isključivanja tajmera"
+msgstr "Opcije onemogućavanja tajmera"
 
 msgid "Orbital position"
 msgstr "Orbitalna pozicija"
@@ -6600,22 +6600,22 @@ msgid "Remove a nameserver entry"
 msgstr "Uklanjanje unosa imena poslužitelja"
 
 msgid "Remove all alternatives"
-msgstr "Izbrišite sve alternative"
+msgstr "Uklonite sve alternative"
 
 msgid "Remove all logfiles"
 msgstr "Uklonite sve datoteke dnevnika"
 
 msgid "Remove all new found flags"
-msgstr "Izbrišite sve nove pronađene zastavice"
+msgstr "Uklonite sve nove pronađene zastavice"
 
 msgid "Remove bookmark"
 msgstr "Uklonite oznake"
 
 msgid "Remove bouquet from parental protection"
-msgstr "Izbrišite paket iz roditeljske zaštite"
+msgstr "Uklonite paket iz roditeljske zaštite"
 
 msgid "Remove cable services"
-msgstr "Izbrišite kabelske usluge"
+msgstr "Uklonite kabelske usluge"
 
 msgid "Remove completed timers after (days)"
 msgstr "Uklanjanje dovršenih tajmera nakon (dana)"
@@ -6624,28 +6624,28 @@ msgid "Remove currently selected title"
 msgstr "Uklonite trenutno odabrani naslov"
 
 msgid "Remove directory"
-msgstr "Izbrišite direktorij"
+msgstr "Uklonite direktorij"
 
 msgid "Remove entry"
-msgstr "Brisanje unosa"
+msgstr "Uklonite unos"
 
 msgid "Remove from parental protection"
-msgstr "Brisanje iz roditeljske zaštite"
+msgstr "Uklonite iz roditeljske zaštite"
 
 msgid "Remove items from trash can after (days)"
 msgstr "Uklonjanje stavki iz kante za smeće nakon (dana)"
 
 msgid "Remove new found flag"
-msgstr "Izbrišite novu pronađenu zastavu"
+msgstr "Uklonite novo pronađenu zastavu"
 
 msgid "Remove plugins"
 msgstr "Uklonite dodatke"
 
 msgid "Remove selected satellite"
-msgstr "Izbrišite odabrane satelite"
+msgstr "Uklonite odabrane satelite"
 
 msgid "Remove terrestrial services"
-msgstr "Izbrišite zemaljske usluge"
+msgstr "Uklonite zemaljske usluge"
 
 msgid "Remove this logfile"
 msgstr "Uklonite ovu datoteku dnevnika"
@@ -6782,7 +6782,7 @@ msgid "Restore backups"
 msgstr "Vraćanje sigurnosnih kopija"
 
 msgid "Restore deleted user bouquets"
-msgstr "Vratiti izbrisane korisničke pakete"
+msgstr "Vratite izbrisane korisničke pakete"
 
 msgid "Restore system settings"
 msgstr "Vraćanje sistemskih postavki"
@@ -7608,7 +7608,7 @@ msgid "Set alternative fallback tuners for DVB-T/C or ATSC"
 msgstr "Postavite alternativne zamjenske prijamnike za DVB-T/C ili ATSC"
 
 msgid "Set as startup service"
-msgstr "Postaviti kao startup kanal"
+msgstr "Postavi kao početni kanal"
 
 msgid "Set blocktimes by weekday"
 msgstr "Postavljanje se ignorira iz dana u dan"
@@ -8983,7 +8983,7 @@ msgid "This option allows you to enable or disable the 10 bit color mode"
 msgstr "Ova opcija omogućuje vam da omogućite ili onemogućite način 10-bitne boje."
 
 msgid "This option allows you to enable or disable the 12 bit color mode"
-msgstr "Ova opcija omogućuje vam da omogućite ili onemogućite 12bitni način rada u boji."
+msgstr "Ova opcija omogućuje vam da omogućite ili onemogućite 12 bitni način rada u boji."
 
 msgid "This option allows you to force the HDR10 modes for UHD"
 msgstr "Ova opcija vam omogućuje da prisilite HDR10 mod za UHD"
@@ -10064,10 +10064,10 @@ msgid "When enabled you can specify a timeframe to ignore the shutdown timer whe
 msgstr "Kada je omogućeno, možete odrediti vremenski okvir za ignoriranje tajmera kada je prijemnik u stanju mirovanja"
 
 msgid "When enabled you can specify a timeframe when the inactivity sleeptimer is ignored. Not the detection is disabled during this timeframe but the inactivity timeout is disabled"
-msgstr "Ako je omogućeno, odredite vremenske periode koji se odnose na djelovanje za tajmer neaktivnosti."
+msgstr "Ako je omogućeno, odredite vremenske periode koji se odnose na djelovanje za tajmer neaktivnosti. U ovom vremenskom periodu nije onemogućeno otkrivanje, već je onemogućeno vrijeme neaktivnosti."
 
 msgid "When enabled you can specify an extra timeframe when the inactivity sleeptimer is ignored. Not the detection is disabled during this timeframe but the inactivity timeout is disabled"
-msgstr "Kada je omogućeno, možete odrediti dodatni vremenski okvir kada se tajmer spavanja neaktivnosti zanemari. Nije otkriveno onemogućavanje tijekom tog vremenskog okvira, ali je vrijeme neaktivnosti onemogućeno."
+msgstr "Ako je omogućeno, odredite dodatne vremenske periode koji se odnose na djelovanje za tajmer neaktivnosti. U ovom vremenskom periodu nije onemogućeno otkrivanje, već je onemogućeno vrijeme neaktivnosti."
 
 msgid "When enabled you can zap channels with the  CH+/-, B+/-, P+/- buttons instead of opening the channel selection list."
 msgstr "Kad je omogućeno, možete prusmjeriti kanale pomoću tipki CH +/-, B +/-, P +/- umjesto otvaranja popisa za odabir kanala."
@@ -10815,7 +10815,7 @@ msgid "detective/thriller"
 msgstr "detektiv/triler"
 
 msgid "disable"
-msgstr "onemogućeno"
+msgstr "onemogućiti"
 
 msgid "disable intro screen"
 msgstr "onemogućite uvodni zaslon"
@@ -11292,13 +11292,13 @@ msgid "remarkable people"
 msgstr "izvanredni ljudi"
 
 msgid "remove after this position"
-msgstr "izbrišite nakon tog položaja"
+msgstr "uklonite nakon tog položaja"
 
 msgid "remove before this position"
-msgstr "izbrišite prije tog položaja"
+msgstr "uklonite prije tog položaja"
 
 msgid "remove this mark"
-msgstr "izbrišite ovu oznaku"
+msgstr "uklonite ovu oznaku"
 
 msgid "repeated"
 msgstr "ponavljati"
