[DiseqcTester] Renamed string
This string is displayed while a diseqc command is tested, so it should be called "testing" and not "working". After the test is over, the string is changed to "successful" or "failed", thus it makes sense. All existing translations are kept as they are.

--- a/po/el.po
+++ b/po/el.po
@@ -11589,8 +11589,8 @@ msgstr "με όνομα tuner"
 msgid "with_errors"
 msgstr "με_σφάλματα"
 
-msgid "working"
-msgstr "σε λειτουργία"
+msgid "testing"
+msgstr "υπό έλεγχο"
 
 msgid "xp1000"
 msgstr "xp1000"
